--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@chakra-ui/react": "^1.6.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.27.1",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-hook-form": "^7.25.1",
+    "react-icons": "^4.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
