--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.7",
+    "miragejs": "^0.1.43",
     "typescript": "^4.2.4"
   }
 }
