chore: add fake data for users

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "5.5.3",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.7",
+    "faker": "5.5.3",
     "miragejs": "^0.1.43",
     "typescript": "^4.2.4"
   }
