--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.34.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
