chore: add user hook

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.27.1",
+    "axios": "^0.26.1",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
